# fileConverer

./: README.md  build.bat  dev.bat  main.py  nuitka-crash-report.xml  pyproject.toml  ui.py
setup/: 【任意文件】右键菜单.bat  【任意目录】右键菜单.bat  【指定文件】右键菜单.bat  注册为普通目录右键菜单.bat  测试脚本.bat
src/: Types.py  main.py  main_launcher.py  pdfAdobeDC.py  pdf_mamanger.py  reg_manager.py  test.py
src/config/: __init__.py
src/events/: __init__.py
src/pdf2img/: mupdf.py
src/ui/: main.py
src/utils/: tk_utils.py
src/word2pdf/: word_to_pdf_by_word.py
ui/: main.frm
