[project]
name = "fileConverer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "CPS", email = "373704015@qq.com"},
]
dependencies = [
    "pywin32>=306",
    "windnd>=1.0.7",
    "nuitka>=2.3",
    "pydantic>=2.7.4",
    "pillow>=10.4.0",
    "pypdf>=4.3.1",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = ""
